Update client logo slider, services, and contact info; remove typewriter effect; align all content

--- a/certificate.html
+++ b/certificate.html
@@ -18,7 +18,7 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About</a>
                     <a href="services.html" class="nav-link">Services</a>
                     <a href="certificate.html" class="nav-link active">Certificate</a>
