--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About</a>
                     <a href="services.html" class="nav-link">Services</a>
                     <a href="certificate.html" class="nav-link">Certificate</a>
@@ -36,6 +36,9 @@
                 We'd love to hear from you! Reach out to us using the information below.
             </p>
             <div class="bg-light rounded-lg shadow-lg p-8 mb-8 text-dark text-left">
+                <div class="mb-4 flex items-center gap-2">
+                    <strong>Contact Person:</strong> <span>Salman Shah</span>
+                </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-map-marker-alt text-primary mr-3"></i>
                     <span>7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</span>
