--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About</a>
                     <a href="services.html" class="nav-link active">Services</a>
                     <a href="certificate.html" class="nav-link">Certificate</a>
@@ -46,21 +46,21 @@
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
                         <i class="fas fa-video text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">CCTV & Access Control</h3>
+                    <h3 class="text-xl font-bold mb-3 text-white">CCTV & Access Control Solutions</h3>
                     <p class="text-gray-400">Advanced CCTV surveillance and access control systems for enhanced security.</p>
                 </div>
                 <div class="service-card card-tilt">
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
                         <i class="fas fa-tools text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">AC Repairing & Installation</h3>
-                    <p class="text-gray-400">Professional air conditioning repair and installation services for homes and businesses.</p>
+                    <h3 class="text-xl font-bold mb-3 text-white">AC Installation & Maintenance</h3>
+                    <p class="text-gray-400">Professional air conditioning installation and maintenance services for homes and businesses.</p>
                 </div>
                 <div class="service-card card-tilt">
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
                         <i class="fas fa-network-wired text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">Network Cabling & Installation</h3>
+                    <h3 class="text-xl font-bold mb-3 text-white">Networking</h3>
                     <p class="text-gray-400">Structured cabling and network installation for reliable connectivity and performance.</p>
                 </div>
                 <div class="service-card card-tilt">
@@ -73,5 +73,45 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
+    <footer class="bg-darker py-16 px-4">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12">
+            <!-- Footer Our Services -->
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Our Services</h4>
+                <ul class="space-y-3">
+                    <li>CCTV & Access Control Solutions</li>
+                    <li>IP Telephone System</li>
+                    <li>AC Installation & Maintenance</li>
+                    <li>Networking</li>
+                    <li>IT Support</li>
+                </ul>
+            </div>
+            <!-- Footer Contact Us -->
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
+                <ul class="space-y-3">
+                    <li class="flex items-center"><strong>Contact Person:</strong> Salman Shah</li>
+                    <li class="flex items-center"><i class="fas fa-map-marker-alt text-primary mr-2"></i> 7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</li>
+                    <li class="flex items-center"><i class="fas fa-phone-alt text-primary mr-2"></i> +966 50 316 0542</li>
+                    <li class="flex items-center"><i class="fas fa-envelope text-primary mr-2"></i> <a href="mailto:salman.ahmed702@gmail.com" class="hover:underline">salman.ahmed702@gmail.com</a></li>
+                </ul>
+            </div>
+            <!-- Footer Quick Links -->
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
+                <ul class="space-y-3">
+                    <li><a href="home.html" class="hover:underline">Home</a></li>
+                    <li><a href="about.html" class="hover:underline">About Us</a></li>
+                    <li><a href="services.html" class="hover:underline">Services</a></li>
+                    <li><a href="certificate.html" class="hover:underline">Certificate</a></li>
+                    <li><a href="contact.html" class="hover:underline">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-16 text-center text-gray-400 text-sm">
+            &copy; 2023 NIT. All rights reserved.
+        </div>
+    </footer>
 </body>
 </html> 
