--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="home.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About</a>
                     <a href="services.html" class="nav-link active">Services</a>
                     <a href="certificate.html" class="nav-link">Certificate</a>
@@ -101,7 +101,7 @@
             <div>
                 <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
                 <ul class="space-y-3">
-                    <li><a href="home.html" class="hover:underline">Home</a></li>
+                    <li><a href="index.html" class="hover:underline">Home</a></li>
                     <li><a href="about.html" class="hover:underline">About Us</a></li>
                     <li><a href="services.html" class="hover:underline">Services</a></li>
                     <li><a href="certificate.html" class="hover:underline">Certificate</a></li>
