--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="about.html" class="nav-link">About</a>
-                    <a href="services.html" class="nav-link">Services</a>
-                    <a href="certificate.html" class="nav-link">Certificate</a>
-                    <a href="contact.html" class="nav-link active">Contact</a>
+                    <a href="/home" class="nav-link">Home</a>
+                    <a href="/about" class="nav-link">About</a>
+                    <a href="/services" class="nav-link">Services</a>
+                    <a href="/certificate" class="nav-link">Certificate</a>
+                    <a href="/contact" class="nav-link active">Contact</a>
                 </div>
             </div>
         </div>
