--- a/services.html
+++ b/services.html
@@ -18,11 +18,11 @@
                     <span class="text-2xl font-bold text-primary">NIT</span>
                 </a>
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="about.html" class="nav-link">About</a>
-                    <a href="services.html" class="nav-link active">Services</a>
-                    <a href="certificate.html" class="nav-link">Certificate</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="/home" class="nav-link">Home</a>
+                    <a href="/about" class="nav-link">About</a>
+                    <a href="/services" class="nav-link active">Services</a>
+                    <a href="/certificate" class="nav-link">Certificate</a>
+                    <a href="/contact" class="nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -101,11 +101,11 @@
             <div>
                 <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
                 <ul class="space-y-3">
-                    <li><a href="index.html" class="hover:underline">Home</a></li>
-                    <li><a href="about.html" class="hover:underline">About Us</a></li>
-                    <li><a href="services.html" class="hover:underline">Services</a></li>
-                    <li><a href="certificate.html" class="hover:underline">Certificate</a></li>
-                    <li><a href="contact.html" class="hover:underline">Contact</a></li>
+                    <li><a href="/home" class="hover:underline">Home</a></li>
+                    <li><a href="/about" class="hover:underline">About Us</a></li>
+                    <li><a href="/services" class="hover:underline">Services</a></li>
+                    <li><a href="/certificate" class="hover:underline">Certificate</a></li>
+                    <li><a href="/contact" class="hover:underline">Contact</a></li>
                 </ul>
             </div>
         </div>
