Enhance contact page: map shows store pin, directions from user location, clickable address links in all footers

--- a/certificate.html
+++ b/certificate.html
@@ -51,5 +51,44 @@
             <a href="about.html" class="btn-secondary btn-ripple text-lg">Back to About Us</a>
         </div>
     </section>
+    <!-- Footer -->
+    <footer class="bg-darker text-light py-16 px-4">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-12">
+            <div>
+                <h3 class="text-2xl font-bold mb-4">NIT</h3>
+                <p class="text-gray-300 mb-6">
+                    NIT is a leading provider of IT infrastructure and network solutions.
+                    We specialize in designing, implementing, and maintaining robust IT systems.
+                </p>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-primary transition-colors duration-300"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div>
+                <h3 class="text-2xl font-bold mb-4">Quick Links</h3>
+                <ul class="space-y-4">
+                    <li><a href="index.html" class="text-gray-300 hover:text-primary transition-colors duration-300">Home</a></li>
+                    <li><a href="about.html" class="text-gray-300 hover:text-primary transition-colors duration-300">About Us</a></li>
+                    <li><a href="services.html" class="text-gray-300 hover:text-primary transition-colors duration-300">Services</a></li>
+                    <li><a href="certificate.html" class="text-gray-300 hover:text-primary transition-colors duration-300">Certificates</a></li>
+                    <li><a href="contact.html" class="text-gray-300 hover:text-primary transition-colors duration-300">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="text-2xl font-bold mb-4">Contact Us</h3>
+                <ul class="space-y-4">
+                    <li class="flex items-center"><i class="fas fa-phone-alt text-primary mr-2"></i> +966 123 456 7890</li>
+                    <li class="flex items-center"><i class="fas fa-envelope text-primary mr-2"></i> info@nit.com</li>
+                    <li class="flex items-center"><i class="fas fa-map-marker-alt text-primary mr-2"></i> <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline">7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-16 text-center text-gray-400 text-sm">
+            &copy; 2023 NIT. All rights reserved.
+        </div>
+    </footer>
 </body>
 </html> 
