--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-map-marker-alt text-primary mr-3"></i>
-                    <span>7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</span>
+                    <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline text-primary">7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</a>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-phone-alt text-primary mr-3"></i>
@@ -51,6 +51,12 @@
                     <i class="fas fa-envelope text-primary mr-3"></i>
                     <a href="mailto:salman.ahmed702@gmail.com" class="text-primary">salman.ahmed702@gmail.com</a>
                 </div>
+            </div>
+            <!-- Google Map Embed -->
+            <div class="rounded-lg overflow-hidden shadow-lg mb-8 cursor-pointer group">
+                <a href="https://www.google.com/maps/dir/?api=1&destination=7086,+Prince+Majid+Ibn+Abdulaziz+street,+Khobar+Shamliyah+Al+Khobar,+34427" target="_blank" rel="noopener noreferrer" title="Get Directions from your location">
+                    <iframe src="https://www.google.com/maps?q=24.902222,46.718056&z=17&output=embed" width="100%" height="350" style="border:0; pointer-events:none; filter: grayscale(0.2) blur(0.5px); transition: filter 0.3s;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="group-hover:filter-none"></iframe>
+                </a>
             </div>
         </div>
     </section>
