--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center gap-2"><strong>Contact Person:</strong> <span>Salman Shah</span></li>
-                        <li class="flex items-center gap-2"><i class="fas fa-map-marker-alt text-primary"></i> <span>7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</span></li>
+                        <li class="flex items-center"><i class="fas fa-map-marker-alt text-primary mr-2"></i> <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline">7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</a></li>
                         <li class="flex items-center gap-2"><i class="fas fa-phone-alt text-primary"></i> <span>+966 50 316 0542</span></li>
                         <li class="flex items-center gap-2"><i class="fas fa-envelope text-primary"></i> <a href="mailto:salman.ahmed702@gmail.com" class="hover:underline">salman.ahmed702@gmail.com</a></li>
                     </ul>
