--- a/services.html
+++ b/services.html
@@ -53,8 +53,8 @@
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
                         <i class="fas fa-tools text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">AC Installation & Maintenance</h3>
-                    <p class="text-gray-400">Professional air conditioning installation and maintenance services for homes and businesses.</p>
+                    <h3 class="text-xl font-bold mb-3 text-white">AC / HVAC Installation & Maintenance</h3>
+                    <p class="text-gray-400">Professional air conditioning and HVAC installation and maintenance services for homes and businesses.</p>
                 </div>
                 <div class="service-card card-tilt">
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
@@ -82,7 +82,7 @@
                 <ul class="space-y-3">
                     <li>CCTV & Access Control Solutions</li>
                     <li>IP Telephone System</li>
-                    <li>AC Installation & Maintenance</li>
+                    <li>AC / HVAC Installation & Maintenance</li>
                     <li>Networking</li>
                     <li>IT Support</li>
                 </ul>
