Fix: Update HVAC product image paths and extensions in products page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - NIT</title>
+    <title>About Us - NITS</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -14,8 +14,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-20 items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="images/logo.png" alt="NIT Logo" class="h-12 mr-3">
-                    <span class="text-2xl font-bold text-primary">NIT</span>
+                    <img src="images/logo.png" alt="NITS Logo" class="h-12 mr-3">
+                    <span class="text-2xl font-bold text-primary">NITS</span>
                 </a>
                 <div class="flex items-center space-x-8">
                     <a href="/home" class="nav-link">Home</a>
@@ -30,9 +30,9 @@
     <!-- About Section -->
     <section class="py-20 px-4 fade-in-section">
         <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-4xl md:text-5xl font-bold mb-6">About NIT</h1>
+            <h1 class="text-4xl md:text-5xl font-bold mb-6">About NITS</h1>
             <p class="text-xl text-gray-300 mb-8 leading-relaxed">
-                NIT (Network Information Technology) is dedicated to delivering innovative IT infrastructure and network solutions. Our mission is to empower businesses to thrive in the digital age with reliable, secure, and scalable technology services.
+                NITS (Network Information Technology System) is dedicated to delivering innovative IT infrastructure and network solutions. Our mission is to empower businesses to thrive in the digital age with reliable, secure, and scalable technology services.
             </p>
             <a href="certificate.html" class="btn-primary btn-ripple text-lg">View Our Certificate</a>
         </div>
