--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-en="NIT - Network Information Technology" data-ar="نيت - تكنولوجيا معلومات الشبكات">NIT - Network Information Technology</title>
+    <title data-en="NITS - Network Information Technology System" data-ar="نيتس - تكنولوجيا معلومات الشبكات">NITS - Network Information Technology System</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -23,8 +23,8 @@
             <div class="flex justify-between h-20">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center">
-                        <img src="images/logo.png" alt="NIT Logo" class="h-12 mr-3">
-                        <span class="text-2xl font-bold text-primary">NIT</span>
+                        <img src="images/logo.png" alt="NITS Logo" class="h-12 mr-3">
+                        <span class="text-2xl font-bold text-primary">NITS</span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8 rtl:space-x-0 rtl:space-x-reverse">
@@ -58,9 +58,9 @@
             <div class="md:flex items-center">
                 <div class="md:w-1/2 mb-12 md:mb-0 rtl:order-2 rtl:md:pl-12 fade-in-up">
                     <span class="inline-block text-sm font-semibold text-primary mb-4"
-                          data-en="WELCOME TO NIT"
-                          data-ar="مرحبًا بكم في نيت">
-                        WELCOME TO NIT
+                          data-en="WELCOME TO NITS"
+                          data-ar="مرحبًا بكم في نيتس">
+                        WELCOME TO NITS
                     </span>
                     <!-- Remove typewriter/blinking effect from hero text -->
                     <p class="hero-typewriter text-4xl md:text-6xl font-bold mb-6 leading-tight hero-reveal">
@@ -173,15 +173,15 @@
             <div class="md:flex items-center">
                 <div class="md:w-1/2 mb-12 md:mb-0 md:pr-12 rtl:md:pr-0 rtl:md:pl-12">
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6"
-                        data-en="About NIT"
-                        data-ar="عن نيت">
-                        About NIT
+                        data-en="About NITS"
+                        data-ar="عن نيتس">
+                        About NITS
                     </h2>
                     <div class="w-24 h-1 bg-primary mb-6"></div>
                     <p class="text-gray-600 mb-6 leading-relaxed"
-                       data-en="At NIT, we're committed to delivering innovative technology solutions that empower businesses to thrive in the digital age. With years of experience in the industry, our team of experts provides reliable, scalable, and secure IT services."
-                       data-ar="نحن في نيت ملتزمون بتقديم حلول تكنولوجية مبتكرة تمكن الشركات من الازدهار في العصر الرقمي. مع سنوات من الخبرة في المجال، يقدم فريقنا من الخبراء خدمات تقنية موثوقة وقابلة للتطوير وآمنة.">
-                        At NIT, we're committed to delivering innovative technology solutions that empower businesses to thrive in the digital age. With years of experience in the industry, our team of experts provides reliable, scalable, and secure IT services.
+                       data-en="At NITS (Network Information Technology System), we're committed to delivering innovative technology solutions that empower businesses to thrive in the digital age. With years of experience in the industry, our team of experts provides reliable, scalable, and secure IT services."
+                       data-ar="نحن في نيتس ملتزمون بتقديم حلول تكنولوجية مبتكرة تمكن الشركات من الازدهار في العصر الرقمي. مع سنوات من الخبرة في المجال، يقدم فريقنا من الخبراء خدمات تقنية موثوقة وقابلة للتطوير وآمنة.">
+                        At NITS (Network Information Technology System), we're committed to delivering innovative technology solutions that empower businesses to thrive in the digital age. With years of experience in the industry, our team of experts provides reliable, scalable, and secure IT services.
                     </p>
                     <p class="text-gray-600 mb-8 leading-relaxed"
                        data-en="Our mission is to help organizations leverage technology to achieve their business goals while maintaining the highest standards of quality and security."
@@ -316,7 +316,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="grid md:grid-cols-4 gap-12">
                 <div>
-                    <h3 class="text-2xl font-bold mb-6">NIT</h3>
+                    <h3 class="text-2xl font-bold mb-6">NITS</h3>
                     <p class="text-gray-400 mb-6"
                        data-en="Empowering businesses with innovative technology solutions for the digital age."
                        data-ar="تمكين الشركات من خلال حلول تكنولوجية مبتكرة لعصر رقمي متطور.">
@@ -376,9 +376,9 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p data-en="&copy; 2025 NIT - Network Information Technology. All rights reserved."
-                   data-ar="&copy; 2025 نيت - تكنولوجيا معلومات الشبكات. جميع الحقوق محفوظة.">
-                    &copy; 2025 NIT - Network Information Technology. All rights reserved.
+                <p data-en="&copy; 2025 NITS - Network Information Technology System. All rights reserved."
+                   data-ar="&copy; 2025 نيتس - تكنولوجيا معلومات الشبكات. جميع الحقوق محفوظة.">
+                    &copy; 2025 NITS - Network Information Technology System. All rights reserved.
                 </p>
             </div>
         </div>
