--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - NIT</title>
+    <title>Services - NITS</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -14,8 +14,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-20 items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="images/logo.png" alt="NIT Logo" class="h-12 mr-3">
-                    <span class="text-2xl font-bold text-primary">NIT</span>
+                    <img src="images/logo.png" alt="NITS Logo" class="h-12 mr-3">
+                    <span class="text-2xl font-bold text-primary">NITS</span>
                 </a>
                 <div class="flex items-center space-x-8">
                     <a href="/home" class="nav-link">Home</a>
@@ -53,7 +53,7 @@
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6">
                         <i class="fas fa-tools text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">AC / HVAC Installation & Maintenance</h3>
+                    <h3 class="text-xl font-bold mb-3 text-white"><a href="products.html" class="hover:underline">AC / HVAC Installation & Maintenance</a></h3>
                     <p class="text-gray-400">Professional air conditioning and HVAC installation and maintenance services for homes and businesses.</p>
                 </div>
                 <div class="service-card card-tilt">
@@ -82,7 +82,7 @@
                 <ul class="space-y-3">
                     <li>CCTV & Access Control Solutions</li>
                     <li>IP Telephone System</li>
-                    <li>AC / HVAC Installation & Maintenance</li>
+                    <li><a href="products.html" class="hover:underline">AC / HVAC Installation & Maintenance</a></li>
                     <li>Networking</li>
                     <li>IT Support</li>
                 </ul>
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="mt-16 text-center text-gray-400 text-sm">
-            &copy; 2023 NIT. All rights reserved.
+            &copy; 2023 NITS. All rights reserved.
         </div>
     </footer>
 </body>
