--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6 mx-auto">
                         <i class="fas fa-tools text-2xl text-primary icon-animate"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-white">AC / HVAC Installation & Maintenance</h3>
+                    <h3 class="text-xl font-bold mb-3 text-white"><a href="products.html" class="hover:underline">AC / HVAC Installation & Maintenance</a></h3>
                     <p class="text-gray-400">Professional air conditioning and HVAC installation and maintenance services for homes and businesses.</p>
                 </div>
                 <div class="service-card fade-in-up slide-in-left card-tilt flex flex-col items-center text-center" style="animation-delay: 0.5s">
