Update: Change contact person name from 'Salman Shah' to 'Salman' in contact, services, and products pages

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             </p>
             <div class="bg-light rounded-lg shadow-lg p-8 mb-8 text-dark text-left">
                 <div class="mb-4 flex items-center gap-2">
-                    <strong>Contact Person:</strong> <span>Salman Shah</span>
+                    <strong>Contact Person:</strong> <span>Salman</span>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-map-marker-alt text-primary mr-3"></i>
