Address Update and name Updatey

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
             </p>
             <div class="bg-light rounded-lg shadow-lg p-8 mb-8 text-dark text-left">
                 <div class="mb-4 flex items-center gap-2">
-                    <strong>Contact Person:</strong> <span>Salman</span>
+                    <strong>Contact Person:</strong> <span>Salman Ali Ahmad</span>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-map-marker-alt text-primary mr-3"></i>
-                    <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline text-primary">7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</a>
+                    <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline text-primary">7086, King Abdullah Bin Abdulaziz Street, 10/11 Khobar Shamliyah Al Khobar, 34427</a>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-phone-alt text-primary mr-3"></i>
