Address Update and name Update with some other changes and secondary no added

--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,23 @@
                     <strong>Contact Person:</strong> <span>Salman Ali Ahmad</span>
                 </div>
                 <div class="mb-4 flex items-center">
-                    <i class="fas fa-map-marker-alt text-primary mr-3"></i>
-                    <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline text-primary">7086, King Abdullah Bin Abdulaziz Street, 10/11 Khobar Shamliyah Al Khobar, 34427</a>
+                    <i class="fas fa-phone-alt text-primary mr-3"></i>
+                    <a href="tel:+966503160542" class="text-primary">+966 50 316 0542</a>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-phone-alt text-primary mr-3"></i>
-                    <a href="tel:+966503160542" class="text-primary">+966 50 316 0542</a>
+                    <a href="tel:0583160542" class="text-primary">0583160542</a>
+                </div>
+                <div class="mb-4 flex items-center gap-2">
+                    <strong>Contact Person:</strong> <span>Rizwan Ahmed</span>
+                </div>
+                <div class="mb-4 flex items-center">
+                    <i class="fas fa-phone-alt text-primary mr-3"></i>
+                    <a href="tel:0555029144" class="text-primary">0555029144</a>
+                </div>
+                <div class="mb-4 flex items-center">
+                    <i class="fas fa-map-marker-alt text-primary mr-3"></i>
+                    <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline text-primary">7086, King Abdullah Bin Abdulaziz Street, 10/11 Khobar Shamliyah Al Khobar, 34427</a>
                 </div>
                 <div class="mb-4 flex items-center">
                     <i class="fas fa-envelope text-primary mr-3"></i>
