--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="service-card fade-in-up slide-in-right card-tilt flex flex-col items-center text-center" style="animation-delay: 0.2s">
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6 mx-auto">
+                        <i class="fas fa-snowflake text-2xl text-primary icon-animate"></i>
+                    </div>
+                    <h3 class="text-xl font-bold mb-3 text-white"><a href="products.html" class="hover:underline">AC / HVAC Installation & Maintenance</a></h3>
+                    <p class="text-gray-400">Professional air conditioning and HVAC installation and maintenance services for homes and businesses.</p>
+                </div>
+                <div class="service-card fade-in-up slide-in-right card-tilt flex flex-col items-center text-center" style="animation-delay: 0.2s">
+                    <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6 mx-auto">
                         <i class="fas fa-phone-volume text-2xl text-primary icon-animate"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-white">IP Telephone System</h3>
@@ -141,13 +148,6 @@
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-white">CCTV & Access Control Solutions</h3>
                     <p class="text-gray-400">Advanced CCTV surveillance and access control systems for enhanced security.</p>
-                </div>
-                <div class="service-card fade-in-up slide-in-right card-tilt flex flex-col items-center text-center" style="animation-delay: 0.4s">
-                    <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6 mx-auto">
-                        <i class="fas fa-tools text-2xl text-primary icon-animate"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-3 text-white"><a href="products.html" class="hover:underline">AC / HVAC Installation & Maintenance</a></h3>
-                    <p class="text-gray-400">Professional air conditioning and HVAC installation and maintenance services for homes and businesses.</p>
                 </div>
                 <div class="service-card fade-in-up slide-in-left card-tilt flex flex-col items-center text-center" style="animation-delay: 0.5s">
                     <div class="w-16 h-16 rounded-full bg-primary bg-opacity-10 flex items-center justify-center mb-6 mx-auto">
@@ -368,9 +368,12 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
                     <ul class="space-y-3">
-                        <li class="flex items-center gap-2"><strong>Contact Person:</strong> <span>Salman Shah</span></li>
-                        <li class="flex items-center"><i class="fas fa-map-marker-alt text-primary mr-2"></i> <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline">7086, Prince Majid Ibn Abdulaziz street, Khobar Shamliyah Al Khobar, 34427</a></li>
+                        <li class="flex items-center gap-2"><strong>Contact Person:</strong> <span>Salman Ali Ahmad</span></li>
                         <li class="flex items-center gap-2"><i class="fas fa-phone-alt text-primary"></i> <span>+966 50 316 0542</span></li>
+                        <li class="flex items-center gap-2"><i class="fas fa-phone-alt text-primary"></i> <span>0583160542</span></li>
+                        <li class="flex items-center gap-2"><strong>Contact Person:</strong> <span>Rizwan Ahmed</span></li>
+                        <li class="flex items-center gap-2"><i class="fas fa-phone-alt text-primary"></i> <span>0555029144</span></li>
+                        <li class="flex items-center"><i class="fas fa-map-marker-alt text-primary mr-2"></i> <a href="https://maps.app.goo.gl/kt4AkwjYh5j9Fw8f6?g_st=awb" target="_blank" rel="noopener noreferrer" class="hover:underline">7086, King Abdullah Bin Abdulaziz Street, 10/11 Khobar Shamliyah Al Khobar, 34427</a></li>
                         <li class="flex items-center gap-2"><i class="fas fa-envelope text-primary"></i> <a href="mailto:salman.ahmed702@gmail.com" class="hover:underline">salman.ahmed702@gmail.com</a></li>
                     </ul>
                 </div>
